# pipeflow

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  TODO.md  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/actions/setup-python/: action.yml
.github/actions/setup-services/: action.yml
.github/compose/: kafka.yml
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: changelog.md  contributing.md  index.md
docs/api/: core.md  monitoring.md  pipes.md  streams.md
docs/examples/: basic-transformation.md  basic_pipeline.md  dataframe-processing.md  lambda-composition.md  pipeline-composition.md  prefect-integration.md  streaming.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/integrations/: kafka.md  prefect.md  rabbitmq.md  sqs.md
docs/user-guide/: configuration.md  error-handling.md  monitoring.md  pipelines.md  pipes.md  streams.md
examples/: basic_transformation.py  dataframe_processing.py  lambda_composition.py  pipeline_composition.py  prefect_integration.py  rabbit_sink_source.py  rabbit_sink_stream.py
plugins/redis/: Makefile  README.md  pyproject.toml
plugins/redis/pipeflow_redis/: __init__.py  config.py  message.py  plugin.py  sink.py  source.py
plugins/redis/tests/: conftest.py  test_sink.py  test_source.py
src/pipeflow/: __init__.py
src/pipeflow/cli/: main.py
src/pipeflow/core/: __init__.py  dataframe.py  message.py  pipe.py  pipeline.py
src/pipeflow/integrations/: aws.py  kafka.py  rabbitmq.py  redis.py
src/pipeflow/monitoring/: metrics.py
src/pipeflow/plugins/: __init__.py  plugins.py
src/pipeflow/streams/: __init__.py  stream.py
src/pipeflow/testing/: fixtures.py
tests/: conftest.py  test_stream.py
tests/integrations/: test_aws.py  test_kafka.py  test_redis.py
tests/test_pipeflow/: test_base.py  test_core.py
